kubernetes/xr3ngine/base/xrchat-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xr3ngine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xr3ngine-mariadb
  namespace: xr3ngine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xr3ngine-mariadb
  template:
    metadata:
      labels:
        app: xr3ngine-mariadb
    spec:
      hostname: xr3ngine-mariadb
      containers:
        - name: mariadb
          image: mariadb:10.5.2
          ports:
            - containerPort: 3306
          volumeMounts:
#            - mountPath: /docker-entrypoint-initdb.d
#              name: mariadb-initdb
            - mountPath: /var/lib/mysql
              name: xr3ngine-mariadb-persistent-storage
      volumes:
        - name: xr3ngine-mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
#        - name: mysql-initdb
#          configMap:
#            name: mariadb-initdb
#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: mariadb-initdb
#data:
#  initdb.sql: |-
#    CREATE USER 'first_user'@'%' IDENTIFIED BY '111' ;
#    CREATE USER 'second_user'@'%' IDENTIFIED BY '222' ;
---
apiVersion: v1
kind: Service
metadata:
  name: xr3ngine-mariadb
  namespace: xr3ngine
spec:
  selector:
    app: xr3ngine-mariadb
  ports:
    - name: xr3ngine-mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xr3ngine
  namespace: xr3ngine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xr3ngine
  template:
    metadata:
      labels:
        app: xr3ngine
    spec:
      serviceAccountName: xr3ngine
      containers:
        - name: xr3ngine
          image: xr3ngine/xr3ngine:v0.0.0
          ports:
            - containerPort: 3030
          imagePullPolicy: IfNotPresent
#      dnsPolicy: Default
#      volumes:
#        - name: xr3ngine-dev-config
#          secret:
#            secretName: xr3ngine-dev-config
---
apiVersion: v1
kind: Service
metadata:
  name: xr3ngine
  namespace: xr3ngine
spec:
  selector:
    app: xr3ngine
  ports:
    - name: xr3ngine
      protocol: TCP
      port: 3030
      targetPort: 3030
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-master
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - api.dev.xr3ngine.io
      secretName: xr3ngine-secret
  rules:
    - host: api.dev.xr3ngine.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-main-minion
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: api.dev.xr3ngine.io
      http:
        paths:
          - backend:
              serviceName: xr3ngine
              servicePort: 3030
            path: /
